# DataProcessingExamples

./: .gitignore  IcepyxEx.ipynb  README.md  SlideruleEx.ipynb  config.json  myst.search.json  myst.xref.json  myst.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml
GNSS/: GNSS_FilterEvents.ipynb  GNSS_WhillansEvent_Kriging.ipynb
GNSS/_Data/: 2014-01-11_09-55-45.evt  features.csv  (+2 more)
ICESat-2/: EarthaccessEx.ipynb  IcepyxEx.ipynb  SlideruleEx.ipynb
SWOT/: SWOT_LR_Height.ipynb  SWOT_PIXC_AmbiguityCorrection.ipynb  SWOT_PlotCycle.ipynb
Seismic/: GNSS_WhillansEvent_Kriging.ipynb  Obspy_IRIS_Download.ipynb
WhillansSeismic/: WhillansSeismic_Ex.ipynb
content/: earthaccessex.json  gnss-filterevents.json  gnss-whillansevent-kriging.json  icepyxex.json  obspy-iris-download.json  readme.json  slideruleex.json  swot-backscatter.json  swot-lr-height.json  swot-pixc-ambiguitycorrection.json  swot-plotcycle.json  whillansseismic-ex.json
public/: EarthaccessEx-49a54afe34ae4031a52539ee71fa17c9.ipynb  GNSS_FilterEvents-3a95176999ab93f6d006598c708cb086.ipynb  GNSS_WhillansEvent_K-667404eb711f0c49b6b29d1b08997ee9.ipynb  IcepyxEx-4e4e58d7c905d522d74e35d721981856.ipynb  Obspy_IRIS_Download-3968149c03395bf31d823603e34fd10b.ipynb  README-d9ad0fde3486a8230417bcf2e8f90420.md  SWOT_LR_Height-2782210d813733be646a4a5235750fbd.ipynb  SWOT_PIXC_AmbiguityC-00e9252466c4043c96cc6dec60ac03d2.ipynb  SWOT_PlotCycle-2cbf18bce6e9157c2d08ba0d4c28cc84.ipynb  SlideruleEx-6a7668508a68e624ae64da9d8e1ff5c6.ipynb  WhillansSeismic_Ex-076a69bd7a58ce2ce156f774e6dc6ffd.ipynb
(+4 files in other folders)
