[project]
name = "dataprocessingexamples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cmap>=0.6.2",
    "dask>=2025.11.0",
    "earthaccess>=0.15.1",
    "icepyx>=1.3.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "obspy>=1.4.2",
    "rasterio>=1.4.3",
    "rpy2>=3.6.4",
    "scikit-learn>=1.7.2",
    "sliderule>=4.20.0",
    "timescale>=0.1.0",
    "xarray[complete,io]>=2025.10.1",
]

[tool.uv.workspace]
members = [
    "WhillansSeismic",
]
